fix searchbar css background bleeding

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -55,6 +55,7 @@
   padding: 10px;
   font-size: 1rem;
   border-radius: 15px;
+  background-color: #f8f9fa;
 }
 
 .searchresult-title {
